--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,10 +22,12 @@
   </head>
 
   <body>
-    <p> Hello World!</p>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <div id="new_tweet_header"><p>Write a new tweet</p>
+      <i class="fas fa-angle-double-down" id="fa-angle-double-down" ></i></div>
+      
     </nav>
 
     <!-- Page-specific (main) content here -->
