--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -29,8 +30,22 @@
       <i class="fas fa-angle-double-down" id="fa-angle-double-down" ></i></div>
       
     </nav>
+    <header>
+      <div id="avatar">
+          <img src="/images/profile-hex.png"> 
+          
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>random things to write</p>
+      <h1> Just trying</h1>
+      <h2>whats up</h2>
+    </main>
   </body>
 </html>
