--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -43,9 +44,23 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>random things to write</p>
-      <h1> Just trying</h1>
-      <h2>whats up</h2>
+      <div class="userTweet">
+      <section class="new-tweet">
+        <div class="composeTweetHeading"><h2>Compose Tweet</h2></div>
+
+        <div class="upperHalfTextbox">
+        <form method="POST" action="/tweets">
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        </div>
+
+          <div class="lowerHalfTextbox">
+            <div class="tweetButton"><button id="tweetButton"type="submit">Tweet</button></div>
+            <div class= "letterCounter"><output name="counter" class="counter" for="tweet-text">140</output></div>
+          </div>
+          
+        </form>
+      </section>
+    </div>
     </main>
   </body>
 </html>
