--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/existingTweets.css" type="text/css"/>
 
 
     <!-- External JS -->
@@ -64,6 +65,27 @@
         </form>
       </section>
     </div>
-    </main>
+  </main>
+    <div id="tweetContainer">
+      <article class="tweetOutline">
+        <header class="tweetHeader">
+          <div class="nameAvatar">
+          <img src="https://i.imgur.com/73hZDYK.png"/>
+          <span>Newton</span>
+        </div>
+          <span>@SirIsaac</span>
+        </header>
+        <p>random tweet message</p>
+        <footer class="tweetFooter">
+          <h4>10 days ago</h4>
+          <span class="tweetIcons">
+            <i class="fa fa-flag" id="flag"></i>
+            <i class="fa fa-retweet" id="retweet"></i>             
+            <i class="fa fa-heart" id="heart"></i>
+            
+          </span>
+        </footer>
+      </article>
+    </div>
   </body>
 </html>
