--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav>
+    <nav class="navBar">
       <span>tweeter</span>
       <div id="new_tweet_header"><p>Write a new tweet</p>
       <i class="fas fa-angle-double-down" id="fa-angle-double-down" ></i></div>
@@ -71,7 +71,7 @@
         <header class="tweetHeader">
           <div class="nameAvatar">
           <img src="https://i.imgur.com/73hZDYK.png"/>
-          <span>Newton</span>
+          <span id="name">Newton</span>
         </div>
           <span>@SirIsaac</span>
         </header>
