dynamic tweets functionality added with timer

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 
     <!-- External JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
-
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
   </head>
@@ -67,13 +67,13 @@
     </div>
   </main>
     <div id="tweetContainer">
-      <article class="tweetOutline">
+      <!-- <article class="tweetOutline">
         <header class="tweetHeader">
           <div class="nameAvatar">
-          <img src="https://i.imgur.com/73hZDYK.png"/>
-          <span id="name">Newton</span>
-        </div>
-          <span>@SirIsaac</span>
+            <img src="https://i.imgur.com/73hZDYK.png"/>
+            <span id="name">Newton</span>
+          </div>
+          <span id="handle">@SirIsaac</span>
         </header>
         <p>random tweet message</p>
         <footer class="tweetFooter">
@@ -85,7 +85,7 @@
             
           </span>
         </footer>
-      </article>
+      </article> -->
     </div>
   </body>
 </html>
