JQuery.serialize is posting data, confirmed with AJAX

--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
       <div class="userTweet">
       <section class="new-tweet">
         
-
+        <form name ="submit-tweet" id="submit-tweet">
         <div class="upperHalfTextbox">
           <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         </div>
 
