--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
     <link rel="stylesheet" href="/styles/existingTweets.css" type="text/css"/>
+    <link rel="stylesheet" href="/styles/alert.css" type="text/css"/>
+
 
 
     <!-- External JS -->
@@ -47,6 +49,10 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <div class="alert">
+        <h5 class="alert-char-exceeding">`Too long! Plz respect our arbitrary limit of 140 characters`</h5>
+        <h5 class="alert-tweet-blank">`Please enter a message`</h5>
+      </div>
       <div class="userTweet">
       <section class="new-tweet">
         
