final commit before first submission

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,12 @@
       </section>
     </div>
     <div id="tweetContainer">
+      <article id="old-tweet"></article>
   </main>
+</div>
+<div class="btn-div">
+  <button id="to-top-btn">Top</button>
+</div>
       <!-- <article class="tweetOutline">
         <header class="tweetHeader">
           <div class="nameAvatar">
